[package]
name = "my-azure-key-vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
flurl = { tag = "0.5.0", git = "https://github.com/MyJetTools/fl-url.git" }
serde = "*"
serde_json = "*"
serde_derive = "*"
